--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "flatpickr": "^4.6.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
