--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,32 @@
-# Ignorar archivos de compilación
-bin/
-obj/
-Debug/
-
-# Ignorar archivos de configuración de usuario
-*.user
-*.suo
-.Frontend
-
-# Ignorar archivos de depuración
-*.pdb
-*.exe
-*.dll
-*.cache
-
-# Ignorar archivos de log
-*.log
-
-# Ignorar carpetas de Visual Studio
-.vs/
-
-# Ignorar archivos de backup
-*.bak
-
-# Ignorar otros archivos generados por el sistema
-Thumbs.db
+*.swp
+*.*~
+project.lock.json
 .DS_Store
+*.pyc
+
+# Visual Studio Code
+.vscode
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+msbuild.log
+msbuild.err
+msbuild.wrn
 
 
+.vs/
