--- a/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.API/appsettings.json
+++ b/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": "Server=(localdb)\\Servidor; DataBase=CentroCastracion;Integrated Security=true"
+    "CadenaSQL": "Server=192.168.1.149,1433; DataBase=CentroCastracion; User Id=sa; Password=centroCastracion5e009195; TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
