--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/material": "^6.1.3",
+    "@mui/x-date-pickers": "^7.20.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
