--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -21,7 +21,9 @@
     "flatpickr": "^4.6.13",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
+    "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
