--- a/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.BLL/SistemaTurneroCastracion.BLL.csproj
+++ b/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.BLL/SistemaTurneroCastracion.BLL.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SistemaTurneroCastracion.DAL\SistemaTurneroCastracion.DAL.csproj" />
     <ProjectReference Include="..\SistemaTurneroCastracion.Entity\SistemaTurneroCastracion.Entity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
+    <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 
 </Project>
