--- a/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.DAL/SistemaTurneroCastracion.DAL.csproj
+++ b/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.DAL/SistemaTurneroCastracion.DAL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaTurneroCastracion.BLL\SistemaTurneroCastracion.BLL.csproj" />
     <ProjectReference Include="..\SistemaTurneroCastracion.Entity\SistemaTurneroCastracion.Entity.csproj" />
   </ItemGroup>
 
