--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^6.1.3",
     "@mui/x-date-pickers": "^7.20.0",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
