--- a/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.BLL/SistemaTurneroCastracion.BLL.csproj
+++ b/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.BLL/SistemaTurneroCastracion.BLL.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
