--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
