--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -32,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
+    "serve": "^14.2.4",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
