--- a/Frontend/vite-project/.env
+++ b/Frontend/vite-project/.env
@@ -34,3 +34,4 @@ VITE_VECINO_URL=https://deep-ghoul-socially.ngrok-free.app/api/vecino
 VITE_VETERINARIO_URL=https://deep-ghoul-socially.ngrok-free.app/api/veterinario
 VITE_VETERINARIO_X_CENTRO_URL=https://deep-ghoul-socially.ngrok-free.app/api/VeterinarioXCentro
 VITE_CALIFICACION_X_CENTRO = https://deep-ghoul-socially.ngrok-free.app/api/Calificacion
+VITE_TURNO_POST_OPERATORIO_URL=https://deep-ghoul-socially.ngrok-free.app/api/Medicamento/obtenerpostoperatorio
