--- a/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.API/SistemaTurneroCastracion.API.csproj
+++ b/Desarrollo del Producto/Backend/SolutionTurneroCastracion/SistemaTurneroCastracion.API/SistemaTurneroCastracion.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<UseRidGraph>true</UseRidGraph>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,12 @@
     <ProjectReference Include="..\SistemaTurneroCastracion.BLL\SistemaTurneroCastracion.BLL.csproj" />
     <ProjectReference Include="..\SistemaTurneroCastracion.Entity\SistemaTurneroCastracion.Entity.csproj" />
     <ProjectReference Include="..\SistemaTurneroCastracion.IOC\SistemaTurneroCastracion.IOC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ImagenesDNI\tessdata\spa.traineddata">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
