boton registrar vecino con mascota, correcciones varias y mejoras en reporte razas

--- a/Frontend/vite-project/.env
+++ b/Frontend/vite-project/.env
@@ -22,12 +22,13 @@ VITE_MIS_TURNOS_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos/misTur
 VITE_CANCELAR_TURNO_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos/cancelarTurno
 VITE_INFORME_TIPO_ANIMAL_URL=https://deep-ghoul-socially.ngrok-free.app/api/Reportes/informesTipoAnimal
 VITE_INFORME_CANCELACIONES_URL=https://deep-ghoul-socially.ngrok-free.app/api/Reportes/informesCancelaciones
+VITE_INFORME_RAZA_URL= https://deep-ghoul-socially.ngrok-free.app/api/Reportes/informesRaza
 VITE_SEXO_URL=https://deep-ghoul-socially.ngrok-free.app/api/sexo
 VITE_TAMANO_URL=https://deep-ghoul-socially.ngrok-free.app/api/tamaño
 VITE_TIPO_ANIMAL_URL=https://deep-ghoul-socially.ngrok-free.app/api/tipoanimal
 VITE_OBTENER_TURNOS_ANIMAL_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos/obtenerTurnosAnimal
 VITE_TURNOS_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos
-VITE_FILTRO_DNI_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos/filtroPorDni
+VITE_FILTRO_DNI_URL= https://deep-ghoul-socially.ngrok-free.app/api/Turnos/filtroPorDni
 VITE_MASCOTAS_NO_CASTRADAS_URL=https://deep-ghoul-socially.ngrok-free.app/api/Mascota/MascotasNoCastradasSecre
 VITE_TURNO_TELEFONICO_URL=https://deep-ghoul-socially.ngrok-free.app/api/Turnos/turnoTelefonico
 VITE_VECINO_URL=https://deep-ghoul-socially.ngrok-free.app/api/vecino
